Closed Bug 749499 Opened 13 years ago Closed 13 years ago

Fix CrossProcessMutex ctor counter

Categories

(Core :: IPC, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

During testing for turning on NPAPI Async drawing by default I discovered a missing ctor counting inside CrossProcessMutex code on windows. This patch fixes that.
Attachment #618913 - Flags: review?(jones.chris.g)
Attachment #618913 - Flags: review?(jones.chris.g) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: