Bug 749499: Fix CrossProcessMutex ctor counter. r=cjones