ipc/glue/CrossProcessMutex_windows.cpp
@@ -65,6 +65,7 @@ CrossProcessMutex::CrossProcessMutex(CrossProcessMutexHandle aHandle)
     NS_RUNTIMEABORT("Attempt to construct a mutex from an invalid handle!");
   }
   mMutex = aHandle;
+  MOZ_COUNT_CTOR(CrossProcessMutex);
 }
 
 CrossProcessMutex::~CrossProcessMutex()
